--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,5 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background: rgb(37,115,220);
+background: linear-gradient(90deg, rgba(37,115,220,1) 0%, rgba(255,255,255,1) 0%, rgba(218,231,249,1) 0%, rgba(149,187,238,1) 17%, rgba(93,151,229,1) 26%, rgba(37,115,220,1) 90%, rgba(37,115,220,1) 100%, rgba(228,235,244,1) 100%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
