--- a/src/component/Card.css
+++ b/src/component/Card.css
@@ -2,6 +2,7 @@
     height: 290px;
     width: 250px;
     background-color: #ffffff5a;
+    border-radius: 10px;
 }
 .heading-card{
     font-size: 25px;
